# bedrock-usage-analyzer

./: .gitignore  .semgrep.yml  CHANGELOG.md  GOVCLOUD_SUPPORT.md  IMPLEMENTATION_SUMMARY.md  MANIFEST.in  README.md  TESTING_COMPLETE.md  TESTING_GUIDE.md  TEST_RESULTS.md  analyze-bedrock-usage.sh  analyze_bedrock_usage.py  pyproject.toml  requirements.txt
dev/: app-index.json
metadata/: fm-list-ap-northeast-1.yml  fm-list-ap-northeast-2.yml  fm-list-ap-northeast-3.yml  fm-list-ap-south-1.yml  fm-list-ap-south-2.yml  fm-list-ap-southeast-1.yml  fm-list-ap-southeast-2.yml  fm-list-ap-southeast-3.yml  fm-list-ap-southeast-4.yml  fm-list-ap-southeast-5.yml  fm-list-ca-central-1.yml  fm-list-eu-central-1.yml  fm-list-eu-central-2.yml  fm-list-eu-north-1.yml  fm-list-eu-south-1.yml  fm-list-eu-west-1.yml  fm-list-eu-west-2.yml  fm-list-eu-west-3.yml  fm-list-me-central-1.yml  fm-list-sa-east-1.yml  fm-list-us-east-1.yml  fm-list-us-east-2.yml  fm-list-us-west-1.yml  fm-list-us-west-2.yml  quota-index.csv  regions.yml
scripts/: generate-test-data.sh  refresh-fm-list.sh  refresh-fm-quotas-mapping.sh  refresh-quota-index.sh  refresh-regions.sh  stress-test.sh
src/bedrock_analyzer/: __version__.py
src/bedrock_analyzer/core/: profile_fetcher.py
src/bedrock_usage_analyzer/: __init__.py  __main__.py
src/bedrock_usage_analyzer/aws/: bedrock.py  bedrock_llm.py  servicequotas.py  sts.py
src/bedrock_usage_analyzer/cli/: analyze.py  refresh.py
src/bedrock_usage_analyzer/core/: analyzer.py  metrics_fetcher.py  output_generator.py  profile_fetcher.py  user_inputs.py
src/bedrock_usage_analyzer/metadata/: fm-list-af-south-1.yml  fm-list-ap-east-2.yml  fm-list-ap-northeast-1.yml  fm-list-ap-northeast-2.yml  fm_list.py  (+28 more)
tests/: test_partition.py
utils/: generate_test_data.py  generate_test_data_parallel.py  refresh_fm_list.py  refresh_fm_quota_mapping.py  refresh_quota_index.py  select_fm_quota_mapping_params.py  test_config.yaml
(+10 files in other folders)
