[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bedrock-usage-analyzer"
version = "0.4.1-beta"
description = "Calculate token usage statistics and map quotas for Amazon Bedrock models"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
authors = [
    {name = "Amazon Web Services"}
]
keywords = ["aws", "bedrock", "cloudwatch", "metrics", "tokens", "usage", "statistics"]

dependencies = [
    "boto3",
    "numpy",
    "jinja2",
    "pyyaml",
    "defusedcsv",
    "platformdirs",
]

[project.urls]
Repository = "https://github.com/awslabs/bedrock-usage-analyzer"

[project.scripts]
bua = "bedrock_usage_analyzer.__main__:main"
bedrock-usage-analyzer = "bedrock_usage_analyzer.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
bedrock_usage_analyzer = ["templates/*.html", "metadata/*.yml", "metadata/*.csv"]